# pyspark-deltalake

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pyspark_test.yml
sparkdelta/: __init__.py
tests/: conftest.py  test_sparkdelta.py
